samples/_failures_safe/1761446350_17f533_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b356ff8a.c: In function ‘print_state_info’:
./samples/SAFE/__tmp_b356ff8a.c:163:5: error: expected declaration or statement at end of input
  163 |     printf("Current State: %s\n", state_names[sm->current_state]);
      |     ^~~~~~
